--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "shibeapp"
 version = "0.1.0"
-authors = ["Andrew Rogers <andrew@cpancake.me>"]
+authors = ["Ashley Rogers <ashley@rogers.cafe>"]
 build = "build.rs"
 
 [build-dependencies]
